# mac-space-monitor-rs

./: .gitignore  Cargo.toml  README.md
examples/: adhoc.rs  monitor.rs
src/: lib.rs
swift/: CurrentSpace-delegate.swift  CurrentSpace-main.swift  CurrentSpace-types.swift  compile.sh
